- header files are now installed in $prefix/include/coin-or instead of $prefix/include/coin
- removed addlibs files, use pkg-config instead
- under Windows/Msys2, DLLs are now build by default
- default --prefix no longer changed, thus should now default to /usr/local
- check for Fortran can be disabled via --disable-f77
- easier build without Fortran compiler
- Lapack is no longer optional, but required; separate check for Blas removed
- Ipopt and sIpopt interface functions are now declared with
  visibility(default)-attribute (if GCC/CLANG), thus building Ipopt with
  -fvisibility=hidden still produces a usable library
- Ipopt and sIpopt interface functions are now declared with dllimport-attribute
  (if MSVC), so that an Ipopt C++ DLL can be used
- --enable-debug does not imply --disable-shared anymore
- removed --enable-debug-ipopt, --enable-debug does similar now
- removed ADD/OPT/DBG_C/CXX/F77FLAGS


2019-04-08 releases/3.12.13
        - fixed Pardiso settings when using Pardiso from Pardiso project
          website (by Olaf Schenk): the new settings should provide much
          better performance; the default for option pardiso_order changed
          from five to metis
        - changed distinction of MKL and Basel Pardiso in configure: to
          use MKL Pardiso, only specify MKL for Blas; to use Basel Pardiso,
          use --with-pardiso

2018-11-17 releases/3.12.12
        - allow for --without-matlab-home to disable check for Matlab [r2748]
        - add dppsv to v8-ifort [r2746]
        - disable error in LibraryHandler.c if snprintf detection failed [r2751]

2018-09-16 releases/3.12.11
        - fill Mumps struct with zeros when allocating in Mumps interface [r2724]
        - minor fix in build-system of ThirdParty/ASL

2018-06-02 releases/3.12.10
        - fixed setting for parallel solve when using MKL Pardiso
          (by t1393988511) [r2711]: parallel solve was disabled (which