@@ -2055,7 +2055,6 @@ INCLUDE_FILE_PATTERNS  =
 # This tag requires that the tag ENABLE_PREPROCESSING is set to YES.
 
 PREDEFINED             = COIN_HAS_ASL \
-                         COIN_HAS_BLAS \
                          COIN_HAS_HSL \
                          COIN_HAS_LAPACK \
                          COIN_HAS_MUMPS \
