@@ -32,7 +32,8 @@ history management of subversion.
 - default --prefix no longer changed, thus should now default to /usr/local
 - check for Fortran can be disabled via --disable-f77
 - easier build without Fortran compiler
-- Lapack is no longer optional, but required; separate check for Blas removed
+- Lapack is no longer optional, but required; separate check for Blas removed,
+  --with-blas flags removed
 - Ipopt and sIpopt interface functions are now declared with
   visibility(default)-attribute (if GCC/CLANG), thus building Ipopt with
   -fvisibility=hidden still produces a usable library
@@ -41,6 +42,9 @@ history management of subversion.
 - --enable-debug does not imply --disable-shared anymore
 - removed --enable-debug-ipopt, --enable-debug does similar now
 - removed ADD/OPT/DBG_C/CXX/F77FLAGS
+- silent build output is now enabled by default, use --disable-silent rules or build
+  with V=1 to disable
+- also for static builds, PIC objects are generated by default, use --without-pic to disable
 
 
 2019-04-08 releases/3.12.13
